--- a/homeworks/package.json
+++ b/homeworks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homeworks",
-  "homepage": "https://IvanFestina.github.io/homeworks",
+  "homepage": "https://IvanFestina.github.io/React-projects/homeworks",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
